html with more button for events

--- a/index.html
+++ b/index.html
@@ -160,6 +160,26 @@
           invaluable to my <br />entrepreneurial journey.
         </p>
       </article>
+
+      <!-- this button is to show more events -->
+      <button id="events-btn" class="container events-btn" type="menu">
+        MORE
+      </button>
+      <article class="events-ch container">
+        <header class="events-hearder">Microsoft AI Summit</header>
+        <p class="para">
+          At the Microsoft AI Summit in T-Hub, we dove into the fascinating
+          world of Azure services and explored the limitless possibilities they
+          offer. From cutting-edge AI capabilities to seamless integration with
+          OpenAI, we discovered how these powerful tools can revolutionize
+          industries and drive innovation.
+        </p>
+        <figure>
+          <img src="images/azure.jpeg" alt="Microsoft AI Summit June T-Hub" />
+        </figure>
+      </article>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
